[project]
name = "multi-agent-coder"
version = "0.1.0"
description = "A production grade multi-agent coding assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "e2b>=0.14.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",       # <-- Added for async API calls (replaces requests)
    "tenacity>=8.2.0",     # <-- Added for exponential backoff retries
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pre-commit>=3.6.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "B"]
ignore = []

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["e2b.*", "redis.*"]
ignore_missing_imports = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]